[package]
name = "pzem004t"
version = "0.1.0"
authors = ["iostapyshyn ilya.ostapyshyn@gmail.com"]
license = "MIT"
repository = "https://github.com/iostapyshyn/pzem004t"
edition = "2018"
description = """
An embedded-hal driver for the PZEM004T Energy Monitor.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
crc16 = "0.4.0"
nb = "0.1.2"

[dependencies.void]
default-features = false
version = "1.0.2"
